# BevyJam2023-2

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: helmet.ktx2  helmit.ktx2
assets/environment_maps/: moonless_golf_4k_diffuse.ktx2  moonless_golf_4k_specular.ktx2
assets/models/: GooseHydra.ktx2  SmallGoose.ktx2  city.glb  city.gltf
assets/shaders/: common.wgsl  large_unit_material.wgsl  large_unit_update.wgsl  minimap_downsample.wgsl  minimap_update.wgsl  particles_material.wgsl  particles_update.wgsl  post_processing.wgsl  rgb9e5.wgsl  sampling.wgsl  unit_evaluate.wgsl  unit_material.wgsl  unit_projectile_material.wgsl  unit_update.wgsl  xyz8e5.wgsl
src/: bind_group_utils.rs  camera_controller.rs  main.rs  minimap.rs  particles.rs  post_process.rs  ui.rs  units.rs
