[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools" }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bytemuck = "1.14.0"


[features]
file_watcher = ["bevy/file_watcher"]
