[package]
name = "gaggle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools" }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_mod_taa = { git = "https://github.com/DGriffin91/bevy_mod_taa", branch = "fast" }
bytemuck = "1.14.0"
bevy_ridiculous_ssgi = { git = "https://github.com/DGriffin91/bevy_ridiculous_ssgi" }
shared_exponent_formats = { git = "https://github.com/DGriffin91/shared_exponent_formats" }
wgpu = { version = "0.17.1", features = [
    "naga",
    "fragile-send-sync-non-atomic-wasm",
] }
async-channel = "2.1.1"
pollster = "0.3.0"
futures-intrusive = "0.5.0"
bevy_picoui = { git = "https://github.com/DGriffin91/bevy_picoui" }

[features]
file_watcher = ["bevy/file_watcher"]
